--- a/src/app/layout/header/header.component.html
+++ b/src/app/layout/header/header.component.html
@@ -1,1 +1,8 @@
-<header></header>
+<header class="p-2 flex gap-2 bg-slate-500">
+  <a routerLink="home" routerLinkActive="bg-red-500" class="p-2 rounded-sm"
+    >page1</a
+  >
+  <a routerLink="test" routerLinkActive="bg-red-500" class="p-2 rounded-sm"
+    >page2</a
+  >
+</header>
