增加在call api的時候會執行loading畫面

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,1 +1,6 @@
 <p>home works!</p>
+<button
+  class="hover:bg-slate-400 bg-slate-200 border-2 rounded-sm p-2 active:bg-slate-800 duration-75"
+  (click)="onGetNews()">
+  取得最新資料
+</button>
