--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,6 @@
 <router-outlet></router-outlet>
+<div
+  *ngIf="loading$ | async"
+  class="fixed w-screen h-screen bg-opacity-60 bg-slate-700 top-0 left-0 flex items-center justify-center">
+  <mat-spinner></mat-spinner>
+</div>
