--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,4 +1,4 @@
-<p>home works!</p>
+<p>home works!!!</p>
 <!-- <button
   class="hover:bg-slate-400 bg-slate-200 border-2 rounded-sm p-2 active:bg-slate-800 duration-75"
   (click)="getNews()">
