service不同實例練習

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,7 +1,2 @@
 <p>home works!!!</p>
-<!-- <button
-  class="hover:bg-slate-400 bg-slate-200 border-2 rounded-sm p-2 active:bg-slate-800 duration-75"
-  (click)="getNews()">
-  取得最新資料
-</button> -->
-<!-- <p>依賴注入練習</p> -->
+<p>依賴注入練習</p>
