--- a/src/app/layout/header/header.component.html
+++ b/src/app/layout/header/header.component.html
@@ -1,9 +1,10 @@
 <header class="p-2 flex gap-2 bg-gray-400">
-  <a
-    *ngFor="let item of menuList"
-    [routerLink]="item.route"
-    class="p-2 rounded-[10px] border-gray-100 border-2"
-    routerLinkActive="border-gray-800"
-    ><button mat-raised-button color="primary">{{ item.name }}</button></a
-  >
+  @for (item of menuList(); track 'Home') {
+    <a
+      [routerLink]="item.route"
+      class="p-2 rounded-[10px] border-gray-100 border-2"
+      routerLinkActive="border-gray-800"
+      ><button mat-raised-button color="primary">{{ item.name }}</button></a
+    >
+  }
 </header>
